# Mesmerize-Renderer

./: .gitignore  CMakeLists.txt  README.md
example/: Model.cpp  Model.h  main.cpp
example/modelLoading/: main.cpp
example/tessalization/: main.cpp
include/private/: VulkanMesh.h  VulkanRenderObject.h  VulkanShader.h  VulkanTexture.h  pch.h
include/private/GenericRenderer/: DefaultPrivate.h  DefaultRenderer.h
include/private/VulkanRenderer/: VulkanMesh.h  VulkanRenderObject.h  VulkanRenderer.h  VulkanShader.h  VulkanTexture.h
include/public/: Mesh.h  Model.h  Renderer.h  Vertex.h
include/public/Mesmerize/: Defaults.h  Model.h  Renderer.h  Vertex.h
shaders/: compile.bat  culling.comp  culling.spv  planet.frag  planet.vert  planetVert.spv  shader.vert  unlit.vert  unlitVert.spv  vert.spv
src/: Mesh.cpp  Model.cpp  Renderer.cpp  VulkanRenderer.cpp
src/GenericRenderer/: Defaults.cpp  Renderer.cpp
